Parameterize service group name
Also, add some documentation.

--- a/playbooks/build-heat-stack.yml
+++ b/playbooks/build-heat-stack.yml
@@ -1,4 +1,7 @@
 ---
+# Build a heat stack. Generate an inventory file based on a
+# successfully created stack.
+
 - hosts: localhost
   gather_facts: no
   tasks:
