--- a/playbooks/pre_puppetize_apis.yml
+++ b/playbooks/pre_puppetize_apis.yml
@@ -1,5 +1,7 @@
 ---
-# Workarounds for both api nodes
+# This playbook contains API node modifications that
+# should be done before puppetizing.
+
 - hosts: api
   become: true
   become_user: root
@@ -8,12 +10,7 @@
     - shell: ln -s /usr/bin/pip /usr/bin/pip-python
       args:
         creates: /usr/bin/pip-python
-# workaround: Add admin role outside of puppet code
-    - cron:
-        name: Add admin role to service group
-        user: root
-        job: source /root/openrc.admintoken;openstack role add --project service --group service admin
-# workaround: preinstall openstack CLI
+# workaround: Preinstall openstack CLI
     - yum:
         name: centos-release-openstack-newton
         state: present
@@ -25,5 +22,10 @@
         path: /bin/openstack
         insertafter: import\ sys
         line: "sys.argv.append('--insecure')"
-      ignore_errors: true
-    - meta: clear_host_errors
+#     ignore_errors: true
+# workaround: Add admin role outside of puppet code
+    - cron:
+        name: Add admin role to service group
+        user: root
+        job: "source /root/openrc.admintoken; openstack role add --project {{ service_group_name }} --group {{ service_group_name }} admin"
+#    - meta: clear_host_errors
