--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -1,16 +1,16 @@
 ---
-# Post puppetization mods
+# Post puppetization API node modifications.
+
 - hosts: api
   become: yes
   become_user: root
   tasks:
-    - name: Disable horizon to keystone SSL verification
+    - name: Disable Horizon to keystone SSL verification
       lineinfile:
         path: /etc/openstack-dashboard/local_settings
         regexp: '.*OPENSTACK_SSL_NO_VERIFY.*'
         line: 'OPENSTACK_SSL_NO_VERIFY = True'
-    - name: Relax allowed hosts
+    - name: Relax Horizon allowed hosts
       shell: sed -i "s/^ALLOWED_HOSTS.*/ALLOWED_HOSTS = ['*', ]/" /etc/openstack-dashboard/local_settings
-    - name: Change horizon login backend to ldap
+    - name: Change Horizon login backend to ldap
       shell: sed -i 's/native/ldap/' /etc/openstack-dashboard/local_settings
-
