--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -1,4 +1,7 @@
 ---
+# Install puppetmaster packages, puppetize puppetmaster.
+# Install squid. Increase memory for puppet-server.
+
 - name: Configure puppetmaster
   hosts: puppet
   tags: puppet
@@ -9,7 +12,7 @@
     - { role: ansible-role-squid, internal_net: "10.99.99.0/24" }
   post_tasks:
     - shell: iptables -F
-    - name: puppet-server craps out - modify puppetdb -Xmx setting and restart services
+    - name: Modify puppetdb -Xmx setting and restart services
       shell: 'sed -i "s/512m/2048m/" "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/role/puppetmaster.pp"'
     - shell: 'sed -i "s/Xmx512m/Xmx2048m/" "/etc/sysconfig/puppetdb"'
     - shell: systemctl restart puppetdb
