--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -5,3 +5,5 @@ heat_environment_file: "../files/heat-params.yml"
 puppetmaster: "{{hostvars['puppet-node']['inventory_hostname']}}"
 puppetmaster_fqdn: "{{hostvars['puppet-node']['inventory_hostname']}}.openstacklocal"
 
+service_group_name: service
+
