Revert to static list name

--- a/playbooks/ldap_server.yml
+++ b/playbooks/ldap_server.yml
@@ -29,7 +29,7 @@
       openldap_server_groups:
         testgroup:
           - testuser
-        "{{ service_group_name }}":
+        service:
           - keystone
           - heat
           - neutron
