--- a/playbooks/puppet_environment_mods.yml
+++ b/playbooks/puppet_environment_mods.yml
@@ -1,5 +1,5 @@
 ---
-# Modifications to cccp newton
+# Modifications to cccp/newton/*
 #
 # Ultimately, this file should cease to exist. Everything should be
 # compensated in cccp instead of modifying the puppet environment post-checkout.
@@ -14,7 +14,7 @@
       shell: 'sed -i "s/auth=neutron_auth)/auth=neutron_auth,verify=False)/" /etc/puppet/environments/{{puppet_environment}}/modules/cccp/files/tools/create-tenants.py'
     - name: workaround - ignore public network related errors
       shell: 'sed -i "s/python create-tenants.py/python create-tenants.py||\/bin\/true/" /etc/puppet/environments/{{puppet_environment}}/modules/cccp/templates/tools/create-tenants.sh.erb'
-    - name: workaround - modify db connection strings since tunneling doesn't work
+    - name: workaround - modify db connection strings since tunneling doesn't work (TODO check current status)
       shell: 'sed -i "s/localhost/galera-node0.openstacklocal/" /etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/{{ item }}.pp'
       with_items:
         - magnum
