--- a/site.yml
+++ b/site.yml
@@ -25,9 +25,13 @@
 - include: playbooks/puppetize_apis_loop.yml # typically runs for more than an hour and does not succeed - fastest strategy seems to be to timeout this 3rd run after 20 minutes or so
 - include: playbooks/puppetize_apis_loop.yml # first run to succeed
 
+# Puppetize obj nodes
+- include: playbooks/puppetize_objs.yml
+- include: playbooks/puppetize_objs.yml
+
 # Puppetize net nodes
-- include: playbooks/puppetize_objs.yml
-- include: playbooks/puppetize_objs.yml
+- include: playbooks/puppetize_nets.yml
+- include: playbooks/puppetize_nets.yml
 
 # Post puppetize actions
 - include: playbooks/post_puppetize_apis.yml
