Simplify api loop logic

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -7,12 +7,4 @@
   pre_tasks:
     - shell: iptables -F
   roles:
-    - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal", ignore_puppetize_errors: true }
-  post_tasks:
-# Condition used to declare victory. Ignored if loopfail=false.
-# Rationale: If either puppetize completes, convergence has occurred
-# and the other failure is probably puppet-server/passenger acting up.
-# TODO: AND through api group rather than individual nodes
-# TODO: See if failing could be deferred to vanilla ansible-role-puppetize/master
-    - fail:
-      when: loopfail and hostvars['api-node0'].puppetize_result.rc != 2 and hostvars['api-node1'].puppetize_result.rc != 2
+    - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
