--- a/playbooks/puppet_environment_mods.yml
+++ b/playbooks/puppet_environment_mods.yml
@@ -20,8 +20,8 @@
         - magnum
         - barbican
     - name: workaround - PUP-7657
-      shell: 'sed -i "/require 'puppet\/provider\/openstack'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack')" /etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb
+      shell: 'sed -i "/require 'puppet\/provider\/openstack'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack')" /etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb'
     - name: workaround - PUP-7657
-      shell: 'sed -i "/require 'puppet\/provider\/openstack\/auth'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/auth')" /etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb
+      shell: 'sed -i "/require 'puppet\/provider\/openstack\/auth'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/auth')" /etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb'
     - name: workaround - PUP-7657
-      shell: 'sed -i "/require 'puppet\/provider\/openstack\/credentials'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/credentials')" /etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb
+      shell: 'sed -i "/require 'puppet\/provider\/openstack\/credentials'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/credentials')" /etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb'
