--- a/playbooks/puppet_environment_mods.yml
+++ b/playbooks/puppet_environment_mods.yml
@@ -25,3 +25,5 @@
       shell: sed -i "s/require 'puppet\/provider\/openstack\/auth'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/auth')/" "/etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb"
     - name: workaround - PUP-7657
       shell: sed -i "s/require 'puppet\/provider\/openstack\/credentials'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/credentials')/" "/etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb"
+    - name: Restart puppet server
+      shell: systemctl restart puppetmaster
