--- a/requirements.yml
+++ b/requirements.yml
@@ -5,6 +5,7 @@
 - src: git@github.com:CSCfi/ansible-role-puppetize.git
   scm: git
   path: roles
+  version: puppetconfmod
 
 - src: https://github.com/junousi/ansible-openldap_server.git
   name: ansible-role-openldap-server
