--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -11,9 +11,12 @@
     - role: ansible-role-puppetmaster
     - { role: ansible-role-squid, internal_net: "10.99.99.0/24" }
   post_tasks:
-    - shell: iptables -F
-    - name: Modify puppetdb -Xmx setting and restart services
-      shell: 'sed -i "s/512m/2048m/" "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/role/puppetmaster.pp"'
-    - shell: 'sed -i "s/Xmx512m/Xmx2048m/" "/etc/sysconfig/puppetdb"'
-    - shell: systemctl restart puppetdb
-    - shell: systemctl restart puppetmaster
+    - name: Workaround
+      shell: iptables -F
+    - name: Workaround - Modules may fall back to this dir
+      shell: rm -Rf /etc/puppet/modules
+    - name: Workaround - Modules may fall back to this dir
+      shell: ln -s /etc/puppet/environments/{{puppet_environment}}/modules /etc/puppet/modules
+      ignore_errors: True
+    - name: Workaround - Create production dir
+      shell: mkdir -p /etc/puppet/environments/production; chown apache:root /etc/puppet/environments/production
