--- a/playbooks/puppetize_compute.yml
+++ b/playbooks/puppetize_compute.yml
@@ -3,11 +3,11 @@
   become: true
   become_user: root
   pre_tasks:
-    - shell: yum install centos-release-openstack-newton.noarch
+    - shell: yum -y install centos-release-openstack-newton.noarch
       ignore_errors: true
     - shell: rpm -Uvh http://sarepos.cpanel.net/centos/7/noarch/MegaCli-8.07.14-1.el7.centos.noarch.rpm
       ignore_errors: true
-    - shell: yum install /bin/ksh libmcrypt bind-utils libtool-libs
+    - shell: yum -y install /bin/ksh libmcrypt bind-utils libtool-libs
       ignore_errors: true
     - shell: rpm -Uvh https://github.com/amuraru/opsview-rpms/raw/master/centos/7/opsview-agent-4.5.4.473-1.ct7.x86_64.rpm
       ignore_errors: true
