More workarounds for nagios stuff

--- a/playbooks/puppetize_compute.yml
+++ b/playbooks/puppetize_compute.yml
@@ -12,5 +12,11 @@
       ignore_errors: true
     - shell: rpm -Uvh https://github.com/amuraru/opsview-rpms/raw/master/centos/7/opsview-agent-4.5.4.473-1.ct7.x86_64.rpm
       ignore_errors: true
+    - shell: mkdir -p /var/log/nagios/.ssh
+      ignore_errors: true
+    - shell: touch /var/log/nagios/.ssh/authorized_keys
+      ignore_errors: true
+    - shell: chown nagios:nagios /var/log/nagios/.ssh/authorized_keys
+      ignore_errors: true
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
