Exclude object node ext if
Modify hosts template so it excludes compute node eth1 getting
picked up to hosts file as an external net interface. Gather facts
before generating hosts file for better detection of eth1.

--- a/playbooks/generate_hostsfile.yml
+++ b/playbooks/generate_hostsfile.yml
@@ -91,7 +91,7 @@
 - hosts: all
   become: yes
   become_user: root
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - name: Clear host errors
       meta: clear_host_errors
