--- a/playbooks/puppetize_compute.yml
+++ b/playbooks/puppetize_compute.yml
@@ -3,6 +3,7 @@
   become: true
   become_user: root
   pre_tasks:
+#workaround: Compensate for missing Spacewalk
     - yum:
         name: "{{ item }}"
         state: present
@@ -27,6 +28,7 @@
     - yum:
         name: /tmp/opsview-agent-5.4.1.172541017-1.ct7.x86_64.rpm
         state: present
+#workaround: Nothing in puppet code seems to create these
     - shell: mkdir -p /var/log/nagios/.ssh
     - shell: touch /var/log/nagios/.ssh/authorized_keys
     - shell: chown nagios:nagios /var/log/nagios/.ssh/authorized_keys
